# toy-db

./: .gitignore  CMakeLists.txt  Makefile  README.md  toy_db
include/: input_buffer.h  parse.h  parsed_flag.h  statement_flag.h
include/storage/: page.h  row.h  table.h
include/user_input/: input_buffer.h  parsed_flag.h  statement_flag.h
src/: main.c
src/storage/: page.c  row.c  table.c
src/user_input/: input_buffer.c  parse.c
test/: unit.h
